--- a/CurrencyChecker.Web/appsettings.json
+++ b/CurrencyChecker.Web/appsettings.json
@@ -1,6 +1,6 @@
 {
 	"AllowedHosts": "*",
-	"ConnectionString": "server=localhost;database=currencyCheckerDb;uid=sa;pwd=Alan123_",
+	"ConnectionString": "server=currency-db,1433;database=currencyCheckerDb;uid=sa;pwd=Alan123_",
 	"HnbUrl": "http://api.hnb.hr/tecajn/v1",
 	"Serilog": {
 		"MinimumLevel": {
